--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="header">
       <div class="img-area">
-        <img src="https://drive.google.com/file/d/1DqWBzR1QrDLUlENQINbNAvs7wVDhIdTa/view?usp=drive_link" alt="">
+        <img src="profile (2).jpeg" alt="img">
       </div>
       <h1> Bhuvaneswari</h1>
       <h3>Data Scientist</h3>
